fix alignment on all screen

--- a/css/front-page.css
+++ b/css/front-page.css
@@ -81,19 +81,23 @@
   opacity: 0.6;
 }
 
+
 /* ====================================================== */
 /* ======================= DESKTOP ====================== */
 /* ====================================================== */
 
 @media only screen and (min-width: 1050px) {
   
+  /* .front-page__how-we-do-it {
+    padding: 60px;
+  } */
   .front-page__how-we-do-it .front-page__how-we-do-it-header {
     font-size: 1.5em;
   }
   .front-page__how-we-do-it .how-we-do-it-single-wrap {
     max-height: 110px;
-    margin: 0 -120px;
-    padding: 0 120px;
+    margin: 0 -60px;
+    padding: 0 60px;
   }
   .front-page__how-we-do-it .how-we-do-it-title {
     font-size: 2.5em;
@@ -157,6 +161,7 @@
   }
   .post-portfolio > .post-meta {
     color: white;
+    display: block;
     left: 15px;
     top: 50%;
     transform: translate(0, -50%);
@@ -200,7 +205,7 @@
 /* ======================= X LARGE ====================== */
 /* ====================================================== */
 
-@media only screen and (min-width: 1450px) {
+@media only screen and (min-width: 1200px) {
 
   .front-page__how-we-do-it .front-page__how-we-do-it-header {
     max-width: 1200px;
